# 07-agentic-workflows

./: .dockerignore  .env.production.example  AGENTS.md  Dockerfile  Makefile  README.md  fly.toml  pyproject.toml  workflow-run.schema.yaml  workflow.schema.yaml
.claude/: settings.json
.github/workflows/: ci.yml  docs-check.yml  validate-workflows.yml
catalog/: workflow-dependencies.yaml  workflow-maturity.yaml  workflow-ownership.yaml  workflows.yaml
docs/: approval-gates.md  architecture.md  examples.md  workflow-design.md  workflow-lifecycle.md  workflow-testing.md  workflow-to-paper-evidence.md  workflow-versioning.md
examples/: create-new-feature.input.json  generate-paper-section.input.json  pre-grand-prix.input.json  run-setup-what-if.input.json  validate-autoskill.input.json
examples/feature-document-analysis/: README.md
examples/feature-telemetry-anomaly/: README.md
examples/paper-section-generation/: README.md
src/workflow_registry/: main.py  middleware.py  rate_limit.py  security.py
tests/: test_api_endpoints.py  test_approval_gates.py  test_production_hardening.py  test_repository_structure.py  test_required_artifacts.py  test_workflow_catalog.py  test_workflow_dependencies.py  test_workflow_schema.py
validators/: validate_approval_gates.py  validate_required_artifacts.py  validate_workflow_catalog.py  validate_workflow_dependencies.py  validate_workflow_schema.py
workflows/: create-new-feature.workflow.yaml  create-new-repository.workflow.yaml  create-new-skill.workflow.yaml  deploy-to-docker.workflow.yaml  deploy-to-kubernetes.workflow.yaml  generate-paper-section.workflow.yaml  run-kdd-experiment.workflow.yaml  validate-autoskill.workflow.yaml
(+55 files in other folders)
