[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "workflow-registry-service"
version = "0.1.0"
description = "Workflow Registry — declarative KDD workflow definitions, validation and registry"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "structlog>=24",
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-exporter-otlp>=1.28",
    "prometheus-client>=0.21",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
workflow-registry-service = "workflow_registry.main:main"
